--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
   <div id="title">Image Upload App</div>
   <form method="POST" action="/upload-spotify-code" enctype="multipart/form-data">
     <div>
-        <label>Select your profile picture:</label>
+        <label>Select Spotify Code:</label>
         <input type="file" name="spotify-code" />
     </div>
     <div>
         <input type="submit" name="btn_upload_spotify_code" value="Upload" />
     </div>
   </form>
-  <!-- <script src="script.js"></script> -->
+  <br>
 </body>
 </html>
